# textual

./: .hgignore  .hgtags  HISTORY  cabal.sandbox.config  textual.cabal
Data/: Textual.hs
