Name:               textual
Version:            1.0.0
Cabal-Version:      >= 1.14
Author:             Richard Cobbe
Synopsis:           Type class for abstracting over representation of textual data
Extra-Source-Files: HISTORY
Build-Type:         Simple
License:            AllRightsReserved
Copyright:          (c) 2013 Richard Cobbe
Maintainer:         cobbe@ccs.neu.edu
Stability:          alpha
Category:           Data
Description:        This package defines a type class that contains frequently-used string operations, and instances of that class for common string types.

Library
  Default-Language: Haskell2010
  Build-Depends:
    base,
    text
  Exposed-Modules: Data.Textual
